# secure-shredder

./: .gitignore  LICENSE  docker-compose.yml
api/: .env.example  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0001_create_jobs_table.py
api/src/shredder_api/: __init__.py  config.py  db.py  enums.py  main.py  models.py  schemas.py
api/src/shredder_api/routes/: jobs.py  upload.py
api/src/shredder_api/services/: dummy_progress.py  engine_runner.py  file_intake.py
api/src/shredder_api/static/: index.html
api/tests/: conftest.py  test_engine_integration.py  test_health.py  test_upload.py
engine/: CMakeLists.txt
engine/src/: main.cpp  progress.cpp  progress.hpp  safety.cpp  safety.hpp  secure_buffer.cpp  secure_buffer.hpp  sha256.cpp  sha256.hpp  shredder.cpp  shredder.hpp
engine/tests/: CMakeLists.txt  test_shredder.cpp
